--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
     "lucide-react": "^0.546.0",
-    "next": "16.0.0-beta.0",
+    "next": "16.0.7",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "react-hook-form": "^7.65.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
@@ -42,7 +42,7 @@
     "dotenv-cli": "^10.0.0",
     "drizzle-kit": "^0.31.5",
     "eslint": "^9",
-    "eslint-config-next": "16.0.0-beta.0",
+    "eslint-config-next": "16.0.7",
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
